Fix for headwrap for high resolution.

--- a/assets/css/navbar.css
+++ b/assets/css/navbar.css
@@ -45,12 +45,10 @@ h2 {
 .btn { border-radius: 35px; }
 
 .headerwrap {
-	background: url(../img/header.jpg) !important;
+	background: url(../img/header.jpg) no-repeat !important;
   background-attachment: fixed;
-  background-repeat: no-repeat;
-  width: 100%;
   height: 750px;
-  background-size: cover;
+  background-size: 100% !important;
   overflow: hidden;
   top: -70px;
   position: relative;
